font size of feedback score

--- a/app/templates/feedback.html
+++ b/app/templates/feedback.html
@@ -17,14 +17,15 @@
         justify-content: center;
         }
 
-        .icon1, .icon2, .icon3 {
+        .icon{
             width: 150px;
             height: 150px;
             background: #000000;
             color: white;
+            font-size: x-large;
         }
 
-        .icon1,.icon2,.icon3 {
+        .icon{
         border-style: ridge;
         display: flex;
         align-items: center;
@@ -73,21 +74,21 @@
                 <tr>
                     <td>
                         <div class="squares" >
-                            <div class="icon1">
+                            <div class="icon">
                                 <p>1</p>
                             </div>
                         </div>
                     </td>
                     <td>
                         <div class="squares">
-                            <div class="icon2">
+                            <div class="icon">
                                 <p>4</p>
                             </div>
                         </div>
                     </td>
                     <td>
                         <div class="squares">
-                            <div class="icon3">
+                            <div class="icon">
                                 <p>4</p>
                             </div>
                         </div>
