--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,4 +70,14 @@
   	</div>
 
     {% block app_content %}{% endblock %}
+
+	<!-- BLANK SPACE -->
+	<section>
+		<div class="container">
+			<div class="row">
+				<br><br><br><br><br>
+			</div>
+		</div>
+	</section>
+
 {% endblock %}
