--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
 {% block styles %}
     {{ super() }}
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles.css')}}">
-	<script src="{{url_for('static', filename='main.js')}}"></script>
+	<!-- <script src="{{url_for('static', filename='main.js')}}"></script> -->
 {% endblock %}
 
 {% block title %}
@@ -52,6 +52,16 @@
 {% endblock %}
 
 {% block content %}
+
+	<style>
+		body, .modal-content {
+			background-color: #212529;
+		}
+		h1, h2, h3, h4, h5, h6, p, label {
+			color: #FFFFFF;
+		}
+	</style>
+
 	<div style="background: url(https://png.pngtree.com/thumb_back/fw800/back_our/20190625/ourmid/pngtree-individual-stocks-rise-and-fall-banner-design-image_261506.jpg)" class="page-holder bg-cover">
 
 		<div class="container py-5">
