--- a/app/templates/feedback.html
+++ b/app/templates/feedback.html
@@ -59,7 +59,7 @@
         </div>
         <div class="container text-center" style="margin-top: 5%;">
             <a>
-                <button type="button" class="btn btn-primary btn-lg" onclick="show_feedback()">Click to see Feedback</button>
+                <button type="button" class="btn btn-primary btn-lg btn-outline-warning" onclick="show_feedback()">Click to see Feedback</button>
             </a>
         </div>
     </section>
