--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -4,7 +4,7 @@
 	<!-- {% for a in attempts %}
 	{{ a.score }}
 	{% endfor %} -->
-
+	<!-- <p>{{ test_avg }}</p> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 
 	<section>
@@ -12,15 +12,15 @@
 			<div class="row">
 				<div class="col d-flex justify-content-center">
 					<!-- DAY FREQUENCY -->
-					<p>TOTAL ATTEMPTS</p>
+					<p>Attempts: {{ total_attempts }}</p>
 				</div>
 				<div class="col d-flex justify-content-center">
 					<!-- SCORE FREQUENCY -->
-					<p>AVERAGE SCORE</p>
+					<p>Averge: {{ avg_score }}</p>
 				</div>
 				<div class="col d-flex justify-content-center">
 					<!-- THIRD -->
-					<p>???</p>
+					<p>Maximum: {{ max_score }}</p>
 				</div>
 			</div>
 			<div class="row">
